footer changes added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1>Welcome to LVC!!</h1>
     <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
       <div class="container text-center">
-        <small>Developed by: Sarthak</small>
+        <small>Developed by: Sarthak Chaudhary</small>
       </div>
     </footer>
   </body>
